[project]
name = "handelsregister"
version = "0.2.0"
description = "Python-Package für das deutsche Handelsregister"
readme = "README.md"
license = "MIT"
authors = [
    { name = "BundesAPI", email = "kontakt@bund.dev" }
]
keywords = ["handelsregister", "germany", "commercial-register", "cli", "api"]
requires-python = ">=3.9"

dependencies = [
    "mechanize>=0.4.8",
    "beautifulsoup4>=4.11.0",
    "diskcache>=5.6.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "ratelimit>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "pytest>=7.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-static-i18n>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/bundesAPI/handelsregister"
Repository = "https://github.com/bundesAPI/handelsregister"
Issues = "https://github.com/bundesAPI/handelsregister/issues"

[project.scripts]
handelsregister = "handelsregister:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=22.6.0",
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit live API (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
